--- a/server/views/invoice.ejs
+++ b/server/views/invoice.ejs
@@ -414,7 +414,7 @@
                                                 <%}%>
 
                                                 <% if (data.shopdetails.Discounts==="true" ){%>
-                                                <td> </td>
+                                                <td> <%= i.DiscountAmount %></td>
                                                 <%}%>
 
                                                 <% if (data.shopdetails.Discounts==="true" ){%>
