--- a/web1/src/app/report/sale-report/sale-report.component.html
+++ b/web1/src/app/report/sale-report/sale-report.component.html
@@ -3157,7 +3157,7 @@
                                 </div>
                             </mat-tab>
 
-                            <mat-tab *ngIf="viewSaleProductExpiryReport" label="Order Form ">
+                            <mat-tab  label="Order Form ">
                                 <div class="body">
                                     <form class="p-3 pb-0" #fof="ngForm" (ngSubmit)="getBillOrderForm()">
                                         <div class="row">
