--- a/web1/src/app/sale/customer-retrun-list/customer-retrun-list.component.html
+++ b/web1/src/app/sale/customer-retrun-list/customer-retrun-list.component.html
@@ -53,7 +53,7 @@
                             <th>Action</th>
                             <th>S.No</th>
                             <th>CustomerName</th>
-                            <th>SystemCn</th>
+                            <!-- <th>SystemCn</th> -->
                             <th>CustomerCn No.</th>
                             <th>Bill Date</th>
                             <th>Quantity</th>
@@ -61,7 +61,6 @@
                             <th>Subtotal</th>
                             <th>TAXAmount</th>
                             <th>InvoiceAmount</th>
-                            <th>TAXNo</th>
                             <th>ReceivedAt</th>
                             <th>CreatedBy</th>
                             <th>UpdatedBy</th>
@@ -71,9 +70,9 @@
                           <tr class="text-center" *ngFor="let data of dataList let i = index;"
                           style="white-space: nowrap;">
                           <td style="width: 5%;" >
-                            <button type="button" *ngIf="editPurchaseReturnList" class="detail_icons bg-btn" (click)="openModal(content,data)" >
+                            <!-- <button type="button" *ngIf="editPurchaseReturnList" class="detail_icons bg-btn" (click)="openModal(content,data)" >
                               <i class="fas fa-info-circle" data-mdb-toggle="modal" data-mdb-target="#exampleModal"> </i>
-                            </button>
+                            </button> -->
                             <button type="button" *ngIf="editPurchaseReturnList" class="bg-btn" [routerLink]="['/sale/customerReturn',data.ID]">
                               <mat-icon class="edit_icon ms-1">edit
                               </mat-icon>
@@ -84,7 +83,7 @@
                           </td>
                           <td>{{dataList.length - i }}</td>
                           <td>{{data.CustomerName}}</td>
-                          <td>{{data.SystemCn}}</td>
+                          <!-- <td>{{data.SystemCn}}</td> -->
                           <td>{{data.CustomerCn}}</td>
                           <td>{{dateFormat(data.BillDate)}}</td>
                           <td>{{data.Quantity}}</td>
@@ -92,7 +91,6 @@
                           <td>{{data.SubTotal | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}}</td>
                           <td>{{data.GSTAmount | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}}</td>
                           <td>{{data.TotalAmount | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}}</td>
-                          <td>{{(data.GSTNo !== 'null')? data.GSTNo: ''}}</td>
                           <td>{{data.ShopName}}<span [style.color]="'blue'"
                             *ngIf="data.AreaName !== 'null'">({{data.AreaName}})</span></td>
                           <td>{{data.CreatedPerson}}</td>
