--- a/web1/src/app/sale/customer-return/customer-return.component.html
+++ b/web1/src/app/sale/customer-return/customer-return.component.html
@@ -48,14 +48,14 @@
                                       </mat-select>
                                     </mat-form-field>
                                   </div>
-                                  <div class="col-xl-1 col-lg-4 col-md-3 col-6 mb-0">
+                                  <!-- <div class="col-xl-1 col-lg-4 col-md-3 col-6 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>SystemCn</mat-label>
                                         <input matInput name="SystemCn " [(ngModel)]="selectedPurchaseMaster.SystemCn"
-                                        required   (ngModelChange)="selectedPurchaseMaster.SystemCn = onChange($event)" autocomplete="off">
+                                           (ngModelChange)="selectedPurchaseMaster.SystemCn = onChange($event)" autocomplete="off">
                                     </mat-form-field>
-                                </div>
-                                <div class="col-xl-2 col-lg-4 col-md-3 col-6 mb-0">
+                                </div> -->
+                                <div class="col-xl-3 col-lg-4 col-md-3 col-6 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Customer CN No.</mat-label>
                                         <input matInput name="CustomerCn" [(ngModel)]="selectedPurchaseMaster.CustomerCn"
@@ -232,7 +232,7 @@
                                             style="border: 2px solid #fff !important;">
                                             <thead>
                                                 <tr style="white-space: nowrap;">
-                                                    <th>Action</th>
+                                                    <!-- <th>Action</th> -->
                                                     <th>InvoiceNo</th>
                                                     <th>Barcode</th>
                                                     <th>Product</th>
@@ -250,9 +250,9 @@
                                             </thead>
                                             <tbody>
                                                 <tr *ngFor="let data of itemList ; let i = index;">
-                                                    <td class="text-center">
+                                                    <!-- <td class="text-center">
                                                         <mat-icon *ngIf="data.Status !== 0 " class="delete_icons ms-1" (click)="deleteItem('Product',i)">delete_forever</mat-icon>
-                                                    </td>
+                                                    </td> -->
                                                     <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" >{{data.InvoiceNo}}</td>
                                                     <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" >{{data.Barcode}}</td>
                                                     <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" >{{data.ProductTypeName}}/{{data.ProductName}}</td>
@@ -347,10 +347,10 @@
                                 <div *ngIf="id == 0" class="col-xl-1 col-lg-1 col-md-2 col-3  mb-0 ml-auto">
                                     <button type="submit" [disabled]="itemList.length === 0"  mat-raised-button color="primary">Save</button>
                                 </div>
-                                <div *ngIf="selectedPurchaseMaster.ID !== null" class="col-xl-1 col-lg-1 col-md-2 col-3  mb-0 mr-3">
+                                <!-- <div *ngIf="selectedPurchaseMaster.ID !== null" class="col-xl-1 col-lg-1 col-md-2 col-3  mb-0 mr-3">
                                     <button type="button" (click)="updateSaleReturn()"  [disabled]="itemList.length === 0"   mat-raised-button
                                         color="primary">Update</button>
-                                </div>
+                                </div> -->
                                
                             </div>
                             <!-- Total calculcation end -->
